# geometry

./: CMakeLists.txt  build.sh  cov.sh  mamba_init.sh  smartlabel.yaml  sonar-project.properties  sonar.sh
include/: multiple_polygon2d.h  polygon2d.h  pre_define.h  region2d.h  spin_mutex.h  vec2d.h
src/: multiple_polygon2d.cc  polygon2d.cc  region2d.cc  spin_mutex.cc  vec2d.cc
test/: multiple_polygon2d_test.cc  polygon2d_test.cc  region_monitor_test.cc  spin_mutex_test.cc  vec2d_test.cc
useless/: region_monitor.cc  region_monitor.h
